make it harder to accidentally unban everyone

--- a/templates/mod/ban_list.html
+++ b/templates/mod/ban_list.html
@@ -21,7 +21,7 @@
 			<div class='buttons'>
 				<input type="text" id="search" placeholder="{% trans %}Search{% endtrans %}">
 				{% if mod %}
-				<input type="submit" name="unban" id="unban" value="{% trans 'Unban selected' %}">
+				<input type="submit" name="unban" id="unban" onclick="return confirm('Are you sure you want to unban the selected IPs?');" value="{% trans 'Unban selected' %}">
 				{% endif %}
 			</div>
 
