fix critical typo for simple spam

--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -217,7 +217,7 @@
 		</tr>{% endif %}
 		{% if config.simple_spam and not id %}<tr>
 			<th>
-				{{ config.simple_spam.prompt }}
+				{{ config.simple_spam.question }}
 				{{ antibot.html() }}
 			</th>
 			<td>
