--- a/templates/banned.html
+++ b/templates/banned.html
@@ -84,6 +84,7 @@
 		</span>
 	</p>
 	<p>{% trans %}Your IP address is{% endtrans %} <strong>{{ ban.ip }}</strong>.</p>
+	<p>{% trans %}Your ban ID is{% endtrans %} <strong>{{ ban.id }}</strong>.</p>
 
 	{% if config.ban_page_extra %}
 		<p>{{ config.ban_page_extra }}</p>
